--- a/Code/xrefmap.yml
+++ b/Code/xrefmap.yml
@@ -1121,12 +1121,57 @@ references:
   commentId: Overload:Testura.Code.Generators.Common.Arguments.ArgumentTypes.InvocationArgument.GetArgumentSyntax
   fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.InvocationArgument.GetArgumentSyntax
   nameWithType: InvocationArgument.GetArgumentSyntax
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument
+  name: LambdaArgument
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.html
+  commentId: T:Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument
+  nameWithType: LambdaArgument
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax,System.String)
+  name: LambdaArgument(BlockSyntax, String)
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_LambdaArgument__ctor_Microsoft_CodeAnalysis_CSharp_Syntax_BlockSyntax_System_String_
+  commentId: M:Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax,System.String)
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.LambdaArgument(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax, System.String)
+  nameWithType: LambdaArgument.LambdaArgument(BlockSyntax, String)
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.ExpressionSyntax,System.String)
+  name: LambdaArgument(ExpressionSyntax, String)
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_LambdaArgument__ctor_Microsoft_CodeAnalysis_CSharp_Syntax_ExpressionSyntax_System_String_
+  commentId: M:Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.ExpressionSyntax,System.String)
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.LambdaArgument(Microsoft.CodeAnalysis.CSharp.Syntax.ExpressionSyntax, System.String)
+  nameWithType: LambdaArgument.LambdaArgument(ExpressionSyntax, String)
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.#ctor*
+  name: LambdaArgument
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_LambdaArgument__ctor_
+  commentId: Overload:Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.#ctor
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.LambdaArgument
+  nameWithType: LambdaArgument.LambdaArgument
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.GetArgumentSyntax
+  name: GetArgumentSyntax()
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_LambdaArgument_GetArgumentSyntax
+  commentId: M:Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.GetArgumentSyntax
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.GetArgumentSyntax()
+  nameWithType: LambdaArgument.GetArgumentSyntax()
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.GetArgumentSyntax*
+  name: GetArgumentSyntax
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_LambdaArgument_GetArgumentSyntax_
+  commentId: Overload:Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.GetArgumentSyntax
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.LambdaArgument.GetArgumentSyntax
+  nameWithType: LambdaArgument.GetArgumentSyntax
 - uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument
   name: ParenthesizedLambdaArgument
   href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.html
   commentId: T:Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument
   fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument
   nameWithType: ParenthesizedLambdaArgument
+- uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax,System.Collections.Generic.IEnumerable{Testura.Code.Models.Parameter})
+  name: ParenthesizedLambdaArgument(BlockSyntax, IEnumerable<Parameter>)
+  href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_ParenthesizedLambdaArgument__ctor_Microsoft_CodeAnalysis_CSharp_Syntax_BlockSyntax_System_Collections_Generic_IEnumerable_Testura_Code_Models_Parameter__
+  commentId: M:Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax,System.Collections.Generic.IEnumerable{Testura.Code.Models.Parameter})
+  name.vb: ParenthesizedLambdaArgument(BlockSyntax, IEnumerable(Of Parameter))
+  fullName: Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.ParenthesizedLambdaArgument(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax, System.Collections.Generic.IEnumerable<Testura.Code.Models.Parameter>)
+  fullName.vb: Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.ParenthesizedLambdaArgument(Microsoft.CodeAnalysis.CSharp.Syntax.BlockSyntax, System.Collections.Generic.IEnumerable(Of Testura.Code.Models.Parameter))
+  nameWithType: ParenthesizedLambdaArgument.ParenthesizedLambdaArgument(BlockSyntax, IEnumerable<Parameter>)
+  nameWithType.vb: ParenthesizedLambdaArgument(BlockSyntax, IEnumerable(Of Parameter))
 - uid: Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.#ctor(Microsoft.CodeAnalysis.CSharp.Syntax.ExpressionSyntax,System.Collections.Generic.IEnumerable{Testura.Code.Models.Parameter})
   name: ParenthesizedLambdaArgument(ExpressionSyntax, IEnumerable<Parameter>)
   href: api/Testura.Code.Generators.Common.Arguments.ArgumentTypes.ParenthesizedLambdaArgument.html#Testura_Code_Generators_Common_Arguments_ArgumentTypes_ParenthesizedLambdaArgument__ctor_Microsoft_CodeAnalysis_CSharp_Syntax_ExpressionSyntax_System_Collections_Generic_IEnumerable_Testura_Code_Models_Parameter__
